# robotics

Project1-Build-My-World/: CMakeLists.txt
Project1-Build-My-World/model/new_building/: model.config  model.sdf
Project1-Build-My-World/model/robot2/: model.sdf
Project1-Build-My-World/script/: first_gazebo.cpp
Project1-Build-My-World/world/: model.sdf
Project1: Build My World/model/mybuilding/: model.sdf
Project1: Build My World/model/robot/: model.sdf
Project1: Build My World/world/: model.sdf
Project2-Go-Chase-It/catkin_ws/: Dockerfile  world3.world
Project2-Go-Chase-It/catkin_ws/devel/include/simple_arm/: GoToPositionResponse.h
Project2-Go-Chase-It/catkin_ws/devel/lib/ball_chaser/: ball_chaser_node  process_image
Project2-Go-Chase-It/catkin_ws/devel/lib/pkgconfig/: ball_chaser.pc  my_robot.pc  simple_arm.pc
Project2-Go-Chase-It/catkin_ws/devel/lib/simple_arm/: arm_mover  look_away
Project2-Go-Chase-It/catkin_ws/devel/share/ball_chaser/cmake/: ball_chaser-msg-extras.cmake  ball_chaserConfig.cmake
Project2-Go-Chase-It/catkin_ws/src/ball_chaser/: CMakeLists.txt
Project2-Go-Chase-It/catkin_ws/src/ball_chaser/launch/: ball_chaser.launch
Project2-Go-Chase-It/catkin_ws/src/ball_chaser/src/: drive_bot.cpp  process_image.cpp
Project2-Go-Chase-It/catkin_ws/src/my_ball/: model.sdf
Project2-Go-Chase-It/catkin_ws/src/my_robot/launch/: world.launch
Project2-Go-Chase-It/catkin_ws/src/my_robot/urdf/: my_robot.xacro
Project2-Go-Chase-It/catkin_ws/src/my_robot/worlds/: world3.world
(+7 files in other folders)
